--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
   - name: Research
     url: /publication
     weight: 11
-  - name: Talks
-    url: /event
-    weight: 12
+  # - name: Talks
+  #   url: /event
+  #   weight: 12
   - name: Experience
     url: experience/
     weight: 20
   - name: Projects
     url: projects/
     weight: 30
-  - name: Uses
-    url: uses/
-    weight: 40
+  # - name: Uses
+  #   url: uses/
+  #   weight: 40
