--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,8 +15,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo résumé theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    description: 'Researcher at the intersection of particle physics and machine learning.'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -40,7 +40,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Ramon Winterhalder. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
