--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,6 @@ main:
   - name: Experience
     url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
-    weight: 30
-  # - name: Uses
-  #   url: uses/
-  #   weight: 40
+  # - name: Projects
+  #   url: projects/
+  #   weight: 30
