--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,8 +14,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website.'
-    twitter: 'GetResearchDev'
+    description: 'Ramon Winterhalder is a postdoctoral researcher at the intersection of particle physics and machine learning.'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
