--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
   - name: Papers
     url: /#papers
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
+  # - name: Talks
+  #   url: /#talks
+  #   weight: 12
   - name: Experience
     url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
-    weight: 30
-  - name: Teaching
-    url: teaching/
-    weight: 40
+  # - name: Projects
+  #   url: projects/
+  #   weight: 30
+  # - name: Teaching
+  #   url: teaching/
+  #   weight: 40
