--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,8 @@ header:
     blox: "navbar"
     fixed_to_top: true
     show_search: true
-    show_theme_chooser: true
+    align: "right"
+    show_theme_chooser: False
     logo:
       text: "Ramon Winterhalder"
 
