--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,7 +36,7 @@ header:
     fixed_to_top: true
     show_search: true
     align: "right"
-    show_theme_chooser: False
+    show_theme_chooser: true
     logo:
       text: "Ramon Winterhalder"
 
