--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@ i_am_a_sponsor: true
 
 # Appearance
 appearance:
-  mode: light
+  mode: dark
   color: blue
 
 # SEO
@@ -36,7 +36,7 @@ header:
     fixed_to_top: true
     show_search: true
     align: "right"
-    show_theme_chooser: false
+    show_theme_chooser: true
     logo:
       text: "Ramon Winterhalder"
 
