--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Ramon Winterhalder is a postdoctoral researcher at the intersection of particle physics and machine learning.'
+    description: 'Ramon Winterhalder is an assistant professor working at the intersection of particle physics and machine learning.'
     twitter: ''
   analytics:
     google_analytics: ''
